--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "http-errors": "~1.6.3",
     "log4js": "^5.1.0",
     "morgan": "~1.9.1",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.17.0",
     "serve-favicon": "^2.5.0"
   }
 }
