--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
-    "eslint": "^6.2.2",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "log4js": "^5.1.0",
     "morgan": "~1.9.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.17.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-plugin-node": "^9.2.0"
   }
 }
