--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "log4js": "^5.1.0",
+    "moment": "^2.24.0",
     "morgan": "~1.9.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.17.0",
